haproxy/letschat/overlays/apps-crc.testing/haproxy-clusterip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: haproxy-lb-service
spec:
  ports:
  - name: main
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: stats
    port: 8404
    protocol: TCP
    targetPort: 8404
